--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,17 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  height: 15%;
+  background-color: #000000;
+}
+
+.App-header p {
+  color: #666666;
 }
 
 .App-link {
