--- a/src/components/MemoryCard.css
+++ b/src/components/MemoryCard.css
@@ -1,11 +1,11 @@
-.MemoryCard {
-  display: inline-block;
+.MemoryCardBack {
+  /* display: inline-block;
   width: 150px;
   height: 80px;
   margin: 3px;
   border-radius: 5px;
   border: solid 3px navy;
-  cursor: pointer;
+  cursor: pointer; */
   background: repeating-linear-gradient(
     45deg,
     #90b4ce,
@@ -13,4 +13,41 @@
     #094067 10px,
     #094067 20px
   );
+}
+
+.MemoryCard {
+  display: inline-block;
+  width: 150px;
+  height: 80px;
+  margin: 5px;
+  cursor: pointer;
+  position: relative;
+  perspective: 800px;
+}
+.MemoryCardInner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  border-radius: 5px;
+  border: 3px solid navy;
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+}
+.MemoryCardFront,
+.MemoryCardBack {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.MemoryCardFront {
+  font-size: 30px;
+  line-height: 75px;
+  transform: rotateY(180deg);
+}
+
+.MemoryCardInner.flipped {
+  transform: rotateY(180deg);
 }
